# dofus-helpers

./: .gitignore  Cargo.toml  README.md  app.py  dofus_handler.py  exec_handler.py  list_modules.py  main.py  requirements.txt  world_graph_parser.py
cheat_engine/: bytecode_aobs.md  find_map_id.CEA
core/: Cargo.toml  build.rs  icons.rc
core/src/: dll_embeder.rs  hook.rs  main.rs  utils.rs
dh_core/: Cargo.toml  build.rs  dofus-helpers.exe.manifest  dofus-helpers.rc
dh_core/src/: dll_embeder.rs  hook.rs  main.rs  system_tray.rs
dh_dll/: Cargo.toml
dh_dll/src/: lib.rs
dh_patcher/: Cargo.toml
dh_patcher/src/: lib.rs  process.rs
dh_utils/: Cargo.toml
dh_utils/src/: lib.rs
dofus_patcher/: Cargo.toml
dofus_patcher/src/: lib.rs  pattern.rs  process.rs
patch_dll/: Cargo.toml
patch_dll/src/: lib.rs
py_dofus/: d2o.py
src/: app.py  dofus_handler.py  dofus_patcher.py  dofus_scanner.py  exec_handler.py  item_criterion.py  main.py  main.rs  memory.py  memory_scanner.py  patch.rs  patcher.py  pathfinding.py  pattern.rs  pattern_scan.py  process.rs  read_write_memory.py  utils.py  utils.rs  world_graph.py  world_graph_parser.py
tesseract-data/: fra-tahoma.traineddata
