[workspace]
members = [
    "dh_utils",
    "dh_patcher",
    "dh_dll",
    "dh_core",
]
resolver = "2"

[workspace.dependencies]
dirs = "5.0.1"
flexi_logger = "0.27.2"
hex = "0.4.3"
libloading = "0.8.1"
log = "0.4.20"
notify-rust = "4.9.0"
regex = "1.7.3"
tray-item = "0.8.0"
winapi = { version = "0.3.9", default-features = false }
