[package]
name = "dh_core"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
windres = "0.2.2"

[[bin]]
name = "dofus-helpers"
path = "src/main.rs"

[dependencies]
dirs = { workspace = true }
dh_utils = { path = "../dh_utils" }
dh_dll = { path = "../dh_dll" }
flexi_logger = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
tray-item = { workspace = true }
winapi = { workspace = true, default-features = false, features = ["windef", "winuser"] }
