[package]
name = "dh_core"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "2.4.0"

[[bin]]
name = "dofus-helpers"
path = "src/main.rs"

[dependencies]
dirs = { workspace = true }
dh_utils = { path = "../dh_utils" }
dh_dll = { path = "../dh_dll" }
flexi_logger = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
native-windows-gui = { workspace = true, default-features = false, features = ["embed-resource", "tray-notification", "message-window", "menu", "cursor"] }
rust-ini = { workspace = true }
winapi = { workspace = true, default-features = false, features = ["windef", "winuser"] }
