[package]
name = "dh_dll"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = { workspace = true }
dh_patcher = { path = "../dh_patcher" }
flexi_logger = { workspace = true }
log = { workspace = true }
notify-rust = { workspace = true }
dh_utils = { path = "../dh_utils" }
winapi = { workspace = true, default-features = false, features = ["winuser"] }
