[package]
name = "dh_patcher"
version = "1.0.0"
edition = "2021"

[dependencies]
dh_utils = { path = "../dh_utils" }
hex = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
winapi = { workspace = true, default-features = false, features = ["errhandlingapi", "handleapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "winnt", "winuser"] }
